Bug 296681 - map online acct in KmyMoney -> crash
Summary: map online acct in KmyMoney -> crash
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 310045 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-24 14:05 UTC by spam_detect
Modified: 2012-11-26 19:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description spam_detect 2012-03-24 14:05:59 UTC
Application: kmymoney (4.5.0)
KDE Platform Version: 4.5.5 (KDE 4.5.5)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-32-generic x86_64
Distribution: Ubuntu 10.10

-- Information about the crash:
- What I was doing when the application crashed:

mapping online account (broker) to KmyMoney account; the certificate root was untrusted; I looked at the certificate, and decided to proceed anyway. After a wait with nothing happening, I clicked back and forward (or previous and next?) in the map-to-online-account wizard, to retry connecting to the online account. After about 34 of these the app KmyMony crashed.

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f9727a27760 (LWP 9431))]

Thread 2 (Thread 0x7f9717b24700 (LWP 9436)):
#0  0x00007f97223eb7f3 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f971d546009 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f971d5467b5 in g_main_loop_run () from /lib/libglib-2.0.so.0
#3  0x00007f971825b3c4 in ?? () from /usr/lib/libgio-2.0.so.0
#4  0x00007f971d56b7e4 in ?? () from /lib/libglib-2.0.so.0
#5  0x00007f972504b971 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#6  0x00007f97223f7f3d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f9727a27760 (LWP 9431)):
[KCrash Handler]
#6  __strncpy_sse2 (s1=0x7fff8f2b8b4f "", s2=0x51 <Address 0x51 out of bounds>, n=32) at ./strncpy.c:42
#7  0x00007f97017959aa in KOnlineBankingSetupWizard::finishLoginPage (this=0x18e96d0) at //usr/include/bits/string3.h:123
#8  0x00007f970179776d in KOnlineBankingSetupWizard::newPage (this=0x7fff8f2b8b4f, id=2) at /build/buildd/kmymoney-4.5/kmymoney/plugins/ofximport/dialogs/konlinebankingsetupwizard.cpp:178
#9  0x00007f970179786b in KOnlineBankingSetupWizard::qt_metacall (this=0x18e96d0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8f2b8de0) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/plugins/ofximport/dialogs/konlinebankingsetupwizard.moc:78
#10 0x00007f972322fb27 in QMetaObject::activate (sender=0x18e96d0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff8f2b8b4f) at kernel/qobject.cpp:3280
#11 0x00007f972410369e in QWizard::currentIdChanged (this=0x7fff8f2b8b4f, _t1=2) at .moc/release-shared/moc_qwizard.cpp:222
#12 0x00007f9724108f0a in QWizardPrivate::switchToPage (this=0x1c7bd70, newId=<value optimized out>, direction=<value optimized out>) at dialogs/qwizard.cpp:892
#13 0x00007f972410a3e8 in QWizard::qt_metacall (this=0x18e96d0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8f2b8fd0) at .moc/release-shared/moc_qwizard.cpp:170
#14 0x00007f97017977f0 in KOnlineBankingSetupWizard::qt_metacall (this=0x7fff8f2b8b4f, _c=81, _id=32, _a=0x7fff8f2b8b4f) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/plugins/ofximport/dialogs/konlinebankingsetupwizard.moc:72
#15 0x00007f972322fb27 in QMetaObject::activate (sender=0x459bcf0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff8f2b8b4f) at kernel/qobject.cpp:3280
#16 0x00007f97242ac402 in QAbstractButton::clicked (this=0x7fff8f2b8b4f, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#17 0x00007f9723fa6eeb in QAbstractButtonPrivate::emitClicked (this=0x3827900) at widgets/qabstractbutton.cpp:546
#18 0x00007f9723fa85bb in QAbstractButtonPrivate::click (this=0x3827900) at widgets/qabstractbutton.cpp:539
#19 0x00007f9723fa882c in QAbstractButton::mouseReleaseEvent (this=0x459bcf0, e=0x7fff8f2b9920) at widgets/qabstractbutton.cpp:1121
#20 0x00007f9723c2504e in QWidget::event (this=0x459bcf0, event=0x7fff8f2b9920) at kernel/qwidget.cpp:8187
#21 0x00007f9723bcefdc in QApplicationPrivate::notify_helper (this=0xd30e40, receiver=0x459bcf0, e=0x7fff8f2b9920) at kernel/qapplication.cpp:4396
#22 0x00007f9723bd530e in QApplication::notify (this=0xd30d70, receiver=0x459bcf0, e=0x7fff8f2b9920) at kernel/qapplication.cpp:3959
#23 0x00007f9726050586 in KApplication::notify (this=0xd30d70, receiver=0x459bcf0, event=0x7fff8f2b9920) at ../../kdeui/kernel/kapplication.cpp:310
#24 0x00007f9723217cdc in QCoreApplication::notifyInternal (this=0xd30d70, receiver=0x459bcf0, event=0x7fff8f2b9920) at kernel/qcoreapplication.cpp:732
#25 0x00007f9723bd3dbe in sendEvent (receiver=0x459bcf0, event=0x7fff8f2b9920, alienWidget=0x459bcf0, nativeWidget=0x1111cb0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#26 QApplicationPrivate::sendMouseEvent (receiver=0x459bcf0, event=0x7fff8f2b9920, alienWidget=0x459bcf0, nativeWidget=0x1111cb0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3058
#27 0x00007f9723c57345 in QETWidget::translateMouseEvent (this=0x1111cb0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4403
#28 0x00007f9723c55c5c in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff8f2ba240) at kernel/qapplication_x11.cpp:3536
#29 0x00007f9723c820e2 in x11EventSourceDispatch (s=0xd34c40, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#30 0x00007f971d542342 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#31 0x00007f971d5462a8 in ?? () from /lib/libglib-2.0.so.0
#32 0x00007f971d54645c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#33 0x00007f9723244193 in QEventDispatcherGlib::processEvents (this=0xd0fe90, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#34 0x00007f9723c81a4e in QGuiEventDispatcherGlib::processEvents (this=0x7fff8f2b8b4f, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#35 0x00007f9723216a02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#36 0x00007f9723216dec in QEventLoop::exec (this=0x7fff8f2ba798, flags=) at kernel/qeventloop.cpp:201
#37 0x00007f97017894b2 in OfxHttpsRequest::OfxHttpsRequest (this=0x7fff8f2ba750, type=<value optimized out>, url=<value optimized out>, postData=..., metaData=<value optimized out>, dst=<value optimized out>, showProgressInfo=true) at /build/buildd/kmymoney-4.5/kmymoney/plugins/ofximport/ofxpartner.cpp:334
#38 0x00007f970179581b in KOnlineBankingSetupWizard::finishLoginPage (this=0x18e96d0) at /build/buildd/kmymoney-4.5/kmymoney/plugins/ofximport/dialogs/konlinebankingsetupwizard.cpp:330
#39 0x00007f970179776d in KOnlineBankingSetupWizard::newPage (this=0x7fff8f2b8b4f, id=2) at /build/buildd/kmymoney-4.5/kmymoney/plugins/ofximport/dialogs/konlinebankingsetupwizard.cpp:178
#40 0x00007f970179786b in KOnlineBankingSetupWizard::qt_metacall (this=0x18e96d0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8f2bac10) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/plugins/ofximport/dialogs/konlinebankingsetupwizard.moc:78
#41 0x00007f972322fb27 in QMetaObject::activate (sender=0x18e96d0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff8f2b8b4f) at kernel/qobject.cpp:3280
#42 0x00007f972410369e in QWizard::currentIdChanged (this=0x7fff8f2b8b4f, _t1=2) at .moc/release-shared/moc_qwizard.cpp:222
#43 0x00007f9724108f0a in QWizardPrivate::switchToPage (this=0x1c7bd70, newId=<value optimized out>, direction=<value optimized out>) at dialogs/qwizard.cpp:892
#44 0x00007f972410a3e8 in QWizard::qt_metacall (this=0x18e96d0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8f2bae00) at .moc/release-shared/moc_qwizard.cpp:170
#45 0x00007f97017977f0 in KOnlineBankingSetupWizard::qt_metacall (this=0x7fff8f2b8b4f, _c=81, _id=32, _a=0x7fff8f2b8b4f) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/plugins/ofximport/dialogs/konlinebankingsetupwizard.moc:72
#46 0x00007f972322fb27 in QMetaObject::activate (sender=0x459bcf0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff8f2b8b4f) at kernel/qobject.cpp:3280
#47 0x00007f97242ac402 in QAbstractButton::clicked (this=0x7fff8f2b8b4f, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#48 0x00007f9723fa6eeb in QAbstractButtonPrivate::emitClicked (this=0x3827900) at widgets/qabstractbutton.cpp:546
#49 0x00007f9723fa85bb in QAbstractButtonPrivate::click (this=0x3827900) at widgets/qabstractbutton.cpp:539
#50 0x00007f9723fa882c in QAbstractButton::mouseReleaseEvent (this=0x459bcf0, e=0x7fff8f2bb750) at widgets/qabstractbutton.cpp:1121
#51 0x00007f9723c2504e in QWidget::event (this=0x459bcf0, event=0x7fff8f2bb750) at kernel/qwidget.cpp:8187
#52 0x00007f9723bcefdc in QApplicationPrivate::notify_helper (this=0xd30e40, receiver=0x459bcf0, e=0x7fff8f2bb750) at kernel/qapplication.cpp:4396
#53 0x00007f9723bd530e in QApplication::notify (this=0xd30d70, receiver=0x459bcf0, e=0x7fff8f2bb750) at kernel/qapplication.cpp:3959
#54 0x00007f9726050586 in KApplication::notify (this=0xd30d70, receiver=0x459bcf0, event=0x7fff8f2bb750) at ../../kdeui/kernel/kapplication.cpp:310
#55 0x00007f9723217cdc in QCoreApplication::notifyInternal (this=0xd30d70, receiver=0x459bcf0, event=0x7fff8f2bb750) at kernel/qcoreapplication.cpp:732
#56 0x00007f9723bd3dbe in sendEvent (receiver=0x459bcf0, event=0x7fff8f2bb750, alienWidget=0x459bcf0, nativeWidget=0x1111cb0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#57 QApplicationPrivate::sendMouseEvent (receiver=0x459bcf0, event=0x7fff8f2bb750, alienWidget=0x459bcf0, nativeWidget=0x1111cb0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3058
#58 0x00007f9723c57345 in QETWidget::translateMouseEvent (this=0x1111cb0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4403
#59 0x00007f9723c55c5c in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff8f2bc070) at kernel/qapplication_x11.cpp:3536
#60 0x00007f9723c820e2 in x11EventSourceDispatch (s=0xd34c40, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#61 0x00007f971d542342 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#62 0x00007f971d5462a8 in ?? () from /lib/libglib-2.0.so.0
#63 0x00007f971d54645c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#64 0x00007f9723244193 in QEventDispatcherGlib::processEvents (this=0xd0fe90, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#65 0x00007f9723c81a4e in QGuiEventDispatcherGlib::processEvents (this=0x7fff8f2b8b4f, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#66 0x00007f9723216a02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#67 0x00007f9723216dec in QEventLoop::exec (this=0x7fff8f2bc3a0, flags=) at kernel/qeventloop.cpp:201
#68 0x00007f97240c37de in QDialog::exec (this=0x18e96d0) at dialogs/qdialog.cpp:552
#69 0x00007f9701780b3d in OfxImporterPlugin::mapAccount (this=<value optimized out>, acc=<value optimized out>, settings=...) at /build/buildd/kmymoney-4.5/kmymoney/plugins/ofximport/ofximporterplugin.cpp:625
#70 0x000000000049d59e in KMyMoneyApp::slotAccountMapOnline (this=0xf22cb0) at /build/buildd/kmymoney-4.5/kmymoney/kmymoney.cpp:6826
#71 0x000000000049e67d in KMyMoneyApp::qt_metacall (this=0xf22cb0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8f2bccf0) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/kmymoney.moc:503
#72 0x00007f972322fb27 in QMetaObject::activate (sender=0x117f7f0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff8f2b8b4f) at kernel/qobject.cpp:3280
#73 0x00007f9723bc7852 in QAction::triggered (this=0x7fff8f2b8b4f, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#74 0x00007f9723bc8f5b in QAction::activate (this=0x117f7f0, event=<value optimized out>) at kernel/qaction.cpp:1256
#75 0x00007f972402fdc1 in QMenuPrivate::activateCausedStack (this=<value optimized out>, causedStack=..., action=0x117f7f0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:993
#76 0x00007f9724035782 in QMenuPrivate::activateAction (this=0x100de40, action=0x117f7f0, action_e=QAction::Trigger, self=<value optimized out>) at widgets/qmenu.cpp:1085
#77 0x00007f97261322be in KMenu::mouseReleaseEvent (this=0x114c100, e=0x51) at ../../kdeui/widgets/kmenu.cpp:471
#78 0x00007f9723c2504e in QWidget::event (this=0x114c100, event=0x7fff8f2bd940) at kernel/qwidget.cpp:8187
#79 0x00007f972403790b in QMenu::event (this=0x114c100, e=0x7fff8f2bd940) at widgets/qmenu.cpp:2410
#80 0x00007f9723bcefdc in QApplicationPrivate::notify_helper (this=0xd30e40, receiver=0x114c100, e=0x7fff8f2bd940) at kernel/qapplication.cpp:4396
#81 0x00007f9723bd530e in QApplication::notify (this=0xd30d70, receiver=0x114c100, e=0x7fff8f2bd940) at kernel/qapplication.cpp:3959
#82 0x00007f9726050586 in KApplication::notify (this=0xd30d70, receiver=0x114c100, event=0x7fff8f2bd940) at ../../kdeui/kernel/kapplication.cpp:310
#83 0x00007f9723217cdc in QCoreApplication::notifyInternal (this=0xd30d70, receiver=0x114c100, event=0x7fff8f2bd940) at kernel/qcoreapplication.cpp:732
#84 0x00007f9723bd3dbe in sendEvent (receiver=0x114c100, event=0x7fff8f2bd940, alienWidget=0x0, nativeWidget=0x114c100, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#85 QApplicationPrivate::sendMouseEvent (receiver=0x114c100, event=0x7fff8f2bd940, alienWidget=0x0, nativeWidget=0x114c100, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3058
#86 0x00007f9723c577bd in QETWidget::translateMouseEvent (this=0x114c100, event=<value optimized out>) at kernel/qapplication_x11.cpp:4337
#87 0x00007f9723c55c5c in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff8f2be260) at kernel/qapplication_x11.cpp:3536
#88 0x00007f9723c820e2 in x11EventSourceDispatch (s=0xd34c40, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#89 0x00007f971d542342 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#90 0x00007f971d5462a8 in ?? () from /lib/libglib-2.0.so.0
#91 0x00007f971d54645c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#92 0x00007f9723244193 in QEventDispatcherGlib::processEvents (this=0xd0fe90, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#93 0x00007f9723c81a4e in QGuiEventDispatcherGlib::processEvents (this=0x7fff8f2b8b4f, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#94 0x00007f9723216a02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#95 0x00007f9723216dec in QEventLoop::exec (this=0x7fff8f2be590, flags=) at kernel/qeventloop.cpp:201
#96 0x00007f9724032ec5 in QMenu::exec (this=0x114c100, p=<value optimized out>, action=0x0) at widgets/qmenu.cpp:2054
#97 0x00000000004569d9 in KMyMoneyApp::showContextMenu (this=<value optimized out>, containerName=...) at /build/buildd/kmymoney-4.5/kmymoney/kmymoney.cpp:5680
#98 0x00000000004621da in KMyMoneyApp::slotShowAccountContextMenu (this=0xf22cb0, obj=<value optimized out>) at /build/buildd/kmymoney-4.5/kmymoney/kmymoney.cpp:5719
#99 0x000000000049e9a2 in KMyMoneyApp::qt_metacall (this=0xf22cb0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8f2bebe0) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/kmymoney.moc:553
#100 0x00007f972322fb27 in QMetaObject::activate (sender=0x137faf0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff8f2b8b4f) at kernel/qobject.cpp:3280
#101 0x00000000004f9b75 in KAccountsView::openContextMenu (this=0x7fff8f2b8b4f, _t1=<value optimized out>) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/views/kaccountsview.moc:152
#102 0x00000000004fdfec in KAccountsView::qt_metacall (this=0x137faf0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8f2beda0) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/views/kaccountsview.moc:115
#103 0x00007f972322fb27 in QMetaObject::activate (sender=0x13824f0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff8f2b8b4f) at kernel/qobject.cpp:3280
#104 0x00000000005b34e5 in KMyMoneyAccountTreeView::openContextMenu (this=0x7fff8f2b8b4f, _t1=<value optimized out>) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/widgets/kmymoneyaccounttreeview.moc:119
#105 0x00000000005b547b in KMyMoneyAccountTreeView::customContextMenuRequested (this=0x13824f0, pos=<value optimized out>) at /build/buildd/kmymoney-4.5/kmymoney/widgets/kmymoneyaccounttreeview.cpp:99
#106 0x00000000005b56d1 in KMyMoneyAccountTreeView::qt_metacall (this=0x13824f0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8f2bf180) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/widgets/kmymoneyaccounttreeview.moc:99
#107 0x00007f972322fb27 in QMetaObject::activate (sender=0x13824f0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff8f2b8b4f) at kernel/qobject.cpp:3280
#108 0x00007f9723c18482 in QWidget::customContextMenuRequested (this=0x7fff8f2b8b4f, _t1=<value optimized out>) at .moc/release-shared/moc_qwidget.cpp:360
#109 0x00007f9723c25412 in QWidget::event (this=0x13824f0, event=0x7fff8f2bfd80) at kernel/qwidget.cpp:8357
#110 0x00007f9723ff05e6 in QFrame::event (this=0x13824f0, e=0x7fff8f2bfd80) at widgets/qframe.cpp:557
#111 0x00007f9724129a8b in QAbstractItemView::viewportEvent (this=0x13824f0, event=0x7fff8f2bfd80) at itemviews/qabstractitemview.cpp:1619
#112 0x00007f9724167d65 in QTreeView::viewportEvent (this=0x13824f0, event=0x7fff8f2bfd80) at itemviews/qtreeview.cpp:1256
#113 0x00007f9723217507 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x1381170, event=0x7fff8f2bfd80) at kernel/qcoreapplication.cpp:847
#114 0x00007f9723bcefac in QApplicationPrivate::notify_helper (this=0xd30e40, receiver=0x1381170, e=0x7fff8f2bfd80) at kernel/qapplication.cpp:4392
#115 0x00007f9723bd4cd1 in QApplication::notify (this=0xd30d70, receiver=0x1381170, e=0x7fff8f2bfd80) at kernel/qapplication.cpp:4038
#116 0x00007f9726050586 in KApplication::notify (this=0xd30d70, receiver=0x1381170, event=0x7fff8f2bfd80) at ../../kdeui/kernel/kapplication.cpp:310
#117 0x00007f9723217cdc in QCoreApplication::notifyInternal (this=0xd30d70, receiver=0x1381170, event=0x7fff8f2bfd80) at kernel/qcoreapplication.cpp:732
#118 0x00007f9723c57392 in QETWidget::translateMouseEvent (this=<value optimized out>, event=<value optimized out>) at kernel/qapplication_x11.cpp:4408
#119 0x00007f9723c55c5c in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff8f2c06d0) at kernel/qapplication_x11.cpp:3536
#120 0x00007f9723c820e2 in x11EventSourceDispatch (s=0xd34c40, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#121 0x00007f971d542342 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#122 0x00007f971d5462a8 in ?? () from /lib/libglib-2.0.so.0
#123 0x00007f971d54645c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#124 0x00007f9723244193 in QEventDispatcherGlib::processEvents (this=0xd0fe90, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#125 0x00007f9723c81a4e in QGuiEventDispatcherGlib::processEvents (this=0x7fff8f2b8b4f, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#126 0x00007f9723216a02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#127 0x00007f9723216dec in QEventLoop::exec (this=0x7fff8f2c0a00, flags=) at kernel/qeventloop.cpp:201
#128 0x00007f972321aebb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#129 0x0000000000452d58 in main (argc=<value optimized out>, argv=<value optimized out>) at /build/buildd/kmymoney-4.5/kmymoney/main.cpp:260

Reported using DrKonqi
Comment 1 spam_detect 2012-03-24 14:10:00 UTC
The original description mentions 34 attempts, going back and forward in a wizard - this should read "3 or 4 attempts."
Comment 2 Cristian Oneț 2012-11-22 17:59:57 UTC
*** Bug 310045 has been marked as a duplicate of this bug. ***
Comment 3 Cristian Oneț 2012-11-26 19:31:49 UTC
Git commit 62c62948cad0841dc585146a7ad55ee533d86097 by Cristian Oneț.
Committed on 26/11/2012 at 20:27.
Pushed by conet into branch 'master'.

Fix a possible crash while mapping an OFX account.

The possibility occurred because the event loop is running
while the https request is performed. To avoid the crash
disable the back button.

M  +6    -0    kmymoney/plugins/ofximport/dialogs/konlinebankingsetupwizard.cpp

http://commits.kde.org/kmymoney/62c62948cad0841dc585146a7ad55ee533d86097
Comment 4 Cristian Oneț 2012-11-26 19:32:38 UTC
Git commit 326578a1ff79a83b748e6575cffd727521425b09 by Cristian Oneț.
Committed on 26/11/2012 at 20:27.
Pushed by conet into branch '4.6'.

Fix a possible crash while mapping an OFX account.

The possibility occurred because the event loop is running
while the https request is performed. To avoid the crash
disable the back button.
(cherry picked from commit 62c62948cad0841dc585146a7ad55ee533d86097)

M  +6    -0    kmymoney/plugins/ofximport/dialogs/konlinebankingsetupwizard.cpp

http://commits.kde.org/kmymoney/326578a1ff79a83b748e6575cffd727521425b09