Fix a possible crash while mapping an OFX account.

The possibility occurred because the event loop is running
while the https request is performed. To avoid the crash
disable the back button.

BUG: 296681