kmymoney/plugins/ofximport/dialogs/konlinebankingsetupwizard.cpp
@@ -326,7 +326,13 @@ bool KOnlineBankingSetupWizard::finishLoginPage(void)
 
     KUrl filename(QString("%1response.ofx").arg(KStandardDirs::locateLocal("appdata", "")));
     QByteArray req(libofx_request_accountinfo(&fi));
+    // because the event loop is running while the request is performed disable the back button
+    // (this function is not reentrant so the application might crash when back/next are used)
+    QAbstractButton *backButton = button(QWizard::BackButton);
+    bool backButtonState = backButton->isEnabled();
+    backButton->setEnabled(false);
     OfxHttpsRequest(QString("POST"), KUrl((*m_it_info).url), req, QMap<QString, QString>(), filename, true);
+    backButton->setEnabled(backButtonState);
 
     LibofxContextPtr ctx = libofx_get_new_context();
     Q_CHECK_PTR(ctx);
